# Organized

./: .gitignore  README.md  pyproject.toml
cabinet/: __init__.py  __main__.py  cli.py  config.py  history.py  i18n.py  organizer.py
tests/: __init__.py  test_config.py  test_history.py  test_i18n.py  test_organizer.py
