[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cabinet-cli"
version = "1.0.0"
description = "An elegant, colorful, and interactive CLI tool to declutter and organize your Downloads folder."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
cabinet = "cabinet.cli:main"
